ProFit/objects/Attendee__c.object
<CustomObject>
    <description>Object for the attendees of the Event.</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name of the Attendees.</description>
        <inlineHelpText>Company Name of the Attendee.</inlineHelpText>
        <label>Company Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the Attendees.</description>
        <inlineHelpText>Primary email of the attendee.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Master Detail the Event Object.</description>
        <inlineHelpText>Event Name.</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Number of the Attendees.</description>
        <inlineHelpText>Contact number of the Attendee.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>